--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^2.18.1",
+    "@headlessui/react": "^2.1.2",
+    "@heroicons/react": "^2.1.5",
     "@tailwindcss/typography": "github:tailwindcss/typography",
     "next": "14.2.5",
     "next-mdx-remote": "^5.0.0",
